--- a/Assignment_2/Documentation.tex
+++ b/Assignment_2/Documentation.tex
@@ -99,9 +99,9 @@ Decision nodes store their label in the \texttt{\textcolor{blue}{char *}} variab
 \item The \textit{generate\_dot(\ldots)} method creates the \texttt{test\_function.dot} file. It then makes one call to \textit{write\_tree(\ldots)} and thereby starts a chain of recursive calls that fill up the \texttt{test\_function.dot} file with nodes and edges.
 
 \item The \textit{write\_tree(\ldots)} method labels nodes and the \textit{write\_node(\ldots)} method links nodes. Both routines call each other recursively until every node has been visited in a depth first search manner.\\
-As long as the current node is not a leaf node the \textit{write\_tree(\ldots)} method computes either the number of the left child node with \texttt{2 $\cdot$ nodenum}\footnote{\texttt{nodenum} denotes the current node number and is 1 for the root node. calls the \textit{write\_node(\ldots)} routine.} or the number of the right child node with \texttt{2 $\cdot$ nodenum + 1}, or, in case of two subtrees, both and then calls the \textit{write\_node(\ldots)} routine(s) accordingly. After linking the parent node to the current node the \textit{write\_node(\ldots)} method calls the \textit{write\_tree(\ldots)} method again. This approach was inspired by the bison calculator by Jim Mahoney\cite{calc}.
+As long as the current node is not a leaf node the \textit{write\_tree(\ldots)} method computes either the number of the left child node with \texttt{2 $\cdot$ nodenum}\footnote{\texttt{nodenum} denotes the current node number and is 1 for the root node.} or the number of the right child node with \texttt{2 $\cdot$ nodenum + 1}, or, in case of two subtrees, both and then calls the \textit{write\_node(\ldots)} routine(s) accordingly. After linking the parent node to the current node the \textit{write\_node(\ldots)} method calls the \textit{write\_tree(\ldots)} method again. This approach was inspired by the bison calculator by Jim Mahoney\cite{calc}.
 
-\item The \textit{free\_tree(\ldots)} method frees all the nodes that were allocated during the parsing process. Unfortunately, I couldn't check with \textit{Valgrind} if all memory is freed correctly since I didn't have the time to set up my own environment with \textit{flex} and \textit{bison}.
+\item The \textit{free\_tree(\ldots)} method frees all the nodes that were allocated during the parsing process. Unfortunately, a check with \textit{Valgrind} indicates that some memory is directly lost and I couldn't fix this issue in time.
 
 \end{itemize}
 
